--- a/NN.ipynb
+++ b/NN.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -90,6 +97,60 @@
     "        self.net = Model(inputs=self.model_input, outputs=genre)\n",
     "        \n",
     "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AudioLyricsCNNModel():\n",
+    "    def __init__(self, num_frames, num_freq_bins, num_conv_filters1, pool_size_1, kernel_size):\n",
+    "        \n",
+    "        # audio data\n",
+    "        self.num_frames = num_frames\n",
+    "        self.num_freq_bins = num_freq_bins\n",
+    "        self.num_conv_filters1 = num_conv_filters1\n",
+    "        self.pool_size1 = pool_size_1\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.audio_input = Input(shape=(num_frames, num_freq_bins))\n",
+    "        \n",
+    "        x = Conv1D(filters=self.num_conv_filters1, kernel_size=self.kernel_size, input_shape=(self.num_frames, self.num_freq_bins))(self.audio_input)\n",
+    "        x = MaxPooling1D(pool_size=self.pool_size1)(x)\n",
+    "        x = Conv1D(filters=256, kernel_size=self.kernel_size)(x)\n",
+    "        x = MaxPooling1D(pool_size=2)(x)\n",
+    "        x = Conv1D(filters=512, kernel_size=self.kernel_size)(x)\n",
+    "        x = MaxPooling1D(pool_size=2)(x)\n",
+    "\n",
+    "        #temporal pooling, L2, mean\n",
+    "        max_layer = GlobalMaxPooling1D(data_format='channels_last')(x)\n",
+    "        mean_layer = GlobalAveragePooling1D(data_format='channels_last')(x)\n",
+    "        L2_layer = Lambda(lambda x: l2_norm(x, 1))(x)\n",
+    "        #TODO:concatenate\n",
+    "        \n",
+    "        self.lyric_data = Input(shape=(embedding_dimension))\n",
+    "        \n",
+    "        x = concatenate([max_layer, mean_layer, L2_layer, self.lyric_data])\n",
+    "        #End\n",
+    "        x = Dense(2048, activation='relu')(x)\n",
+    "        x = Dense(2048, activation='relu')(x)\n",
+    "#         latent_factors = Dense(50)(x)\n",
+    "#         popularity = Lambda(lambda x: l2_norm(x, 0))(x)\n",
+    "        x = Dense(50, activation='relu')(x)\n",
+    "        #TODO: How many genres?\n",
+    "        genre = Dense(15, activation='softmax')(x)\n",
+    "        #TODO: How to make the output?\n",
+    "        self.net = Model(inputs=self.model_input, outputs=genre)\n",
+    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init Models and get data"
    ]
   },
   {
