--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -1906,9 +1906,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "music-cs182",
+   "display_name": "Environment (conda_tensorflow_p27)",
    "language": "python",
-   "name": "music-cs182"
+   "name": "conda_tensorflow_p27"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1920,7 +1920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
