Model finally works

--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,26 +17,26 @@
     "import numpy as np # get it at: http://numpy.scipy.org/\n",
     "# path to the Million Song Dataset subset (uncompressed)\n",
     "# CHANGE IT TO YOUR LOCAL CONFIGURATION\n",
-    "msd_subset_path='./data/MSD/MillionSongSubset'\n",
-    "msd_subset_data_path=os.path.join(msd_subset_path,'data')\n",
-    "msd_subset_addf_path=os.path.join(msd_subset_path,'AdditionalFiles')\n",
-    "assert os.path.isdir(msd_subset_path),'wrong path' # sanity check\n",
-    "# path to the Million Song Dataset code\n",
-    "# CHANGE IT TO YOUR LOCAL CONFIGURATION\n",
-    "msd_code_path='./data/MSD/MSongsDB'\n",
-    "assert os.path.isdir(msd_code_path),'wrong path' # sanity check\n",
-    "# we add some paths to python so we can import MSD code\n",
-    "# Ubuntu: you can change the environment variable PYTHONPATH\n",
-    "# in your .bashrc file so you do not have to type these lines\n",
-    "sys.path.append(os.path.join(msd_code_path,'PythonSrc') )\n",
+    "# msd_subset_path='/mnt/snap/data/MSD/MillionSongSubset'\n",
+    "# msd_subset_data_path=os.path.join(msd_subset_path,'data')\n",
+    "msd_subset_addf_path=os.path.join('/mnt/snap','AdditionalFiles')\n",
+    "# assert os.path.isdir(msd_subset_path),'wrong path' # sanity check\n",
+    "# # path to the Million Song Dataset code\n",
+    "# # CHANGE IT TO YOUR LOCAL CONFIGURATION\n",
+    "# msd_code_path='./data/MSD/MSongsDB'\n",
+    "# assert os.path.isdir(msd_code_path),'wrong path' # sanity check\n",
+    "# # we add some paths to python so we can import MSD code\n",
+    "# # Ubuntu: you can change the environment variable PYTHONPATH\n",
+    "# # in your .bashrc file so you do not have to type these lines\n",
+    "# sys.path.append(os.path.join(msd_code_path,'PythonSrc') )\n",
     "\n",
     "taste_profile_data_path=\"./data/train_triplets.txt\"\n",
-    "filtered_taste_profile_data_path=\"./data/FilteredEchoNestTasteProfileSubset.csv\"\n",
+    "# filtered_taste_profile_data_path=\"./data/FilteredEchoNestTasteProfileSubset.csv\"\n",
     "\n",
-    "assert os.path.isfile(taste_profile_data_path)\n",
+    "# assert os.path.isfile(taste_profile_data_path)\n",
     "\n",
     "# imports specific to the MSD\n",
-    "import hdf5_getters as GETTERS\n",
+    "# import hdf5_getters as GETTERS\n",
     "\n",
     "from pyspark.ml.recommendation import ALS\n",
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4  b80344d063b5ccb3212f76538f3d9e43d87dca9e  SOBFOVM12A58A7D494           1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,47 +173,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the song ids which are also in the database. \n",
-    "song_ids = []\n",
+    "track_ids = []\n",
     "\n",
     "# for song_id in data['song'].values:\n",
     "# let's redo all this work in SQLite in a few seconds\n",
     "t1 = time.time()\n",
     "# connect to database to get the metadata from MSD\n",
     "conn = sqlite3.connect(os.path.join(msd_subset_addf_path,\n",
-    "                                    'subset_track_metadata.db'))\n",
+    "                                    'track_metadata.db'))\n",
     "\n",
-    "q = \"SELECT DISTINCT song_id FROM songs\"\n",
+    "q = \"SELECT DISTINCT song_id, track_id, artist_name, title FROM songs\"\n",
     "#     q += \" WHERE song_id='\" + song_id + \"'\"\n",
     "res = conn.execute(q)\n",
     "res = res.fetchall()\n",
     "conn.close()\n",
     "t2 = time.time()\n",
-    "song_ids_dict = {r[0]: 1 for r in res}\n",
+    "\n",
+    "song_to_track = {}\n",
+    "track_to_song = {}\n",
+    "for r in res:\n",
+    "    song_to_track[r[0]] = r[1]\n",
+    "    track_to_song[r[1]] = r[0]\n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msd_df = pd.DataFrame(data=res, columns=[\"song_id\", \"track_id\", \"artist_id\", \"song_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "2.98820495605\n"
+      "True\n",
+      "0.000231027603149\n"
      ]
     }
    ],
    "source": [
     "a = time.time()\n",
-    "print \"SOAPDEY12A81C210A9\" in song_ids_dict\n",
+    "print \"SOAPDEY12A81C210A9\" in song_to_track\n",
     "print(time.time() - a)"
    ]
   },
@@ -277,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +311,7 @@
        "384546"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,54 +322,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_popularity_subset = song_popularity.sort_values([\"play_count\"], ascending=False).iloc[:1000]\n"
+    "song_popularity_subset = song_popularity.sort_values([\"play_count\"], ascending=False).iloc[:100000]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>play_count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>song</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SOBONKR12A58A7A7E0</th>\n",
+       "      <td>726885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOAUWYT12A81C206F1</th>\n",
+       "      <td>648239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOSXLTC12AF72A7F54</th>\n",
+       "      <td>527893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOFRQTD12A81C233C0</th>\n",
+       "      <td>425463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOEGIYH12A6D4FC0E3</th>\n",
+       "      <td>389880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOAXGDH12A8C13F8A1</th>\n",
+       "      <td>356533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SONYKOW12AB01849C9</th>\n",
+       "      <td>292642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOPUCYA12A8C13A694</th>\n",
+       "      <td>274627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOUFTBI12AB0183F65</th>\n",
+       "      <td>268353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOVDSJC12A58A7A271</th>\n",
+       "      <td>244730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOOFYTN12A6D4F9B35</th>\n",
+       "      <td>241669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOHTKMO12AB01843B0</th>\n",
+       "      <td>236494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOBOUPA12A6D4F81F1</th>\n",
+       "      <td>225652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SODJWHY12A8C142CCE</th>\n",
+       "      <td>209212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOLFXKT12AB017E3E0</th>\n",
+       "      <td>197181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOTCMDJ12A6D4F8528</th>\n",
+       "      <td>192884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOFLJQZ12A6D4FADA6</th>\n",
+       "      <td>185653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOTWNDJ12A8C143984</th>\n",
+       "      <td>174080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOUNZHU12A8AE47481</th>\n",
+       "      <td>158636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOUVTSM12AC468F6A7</th>\n",
+       "      <td>155717</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index([u'SOBONKR12A58A7A7E0', u'SOAUWYT12A81C206F1', u'SOSXLTC12AF72A7F54',\n",
-       "       u'SOFRQTD12A81C233C0', u'SOEGIYH12A6D4FC0E3', u'SOAXGDH12A8C13F8A1',\n",
-       "       u'SONYKOW12AB01849C9', u'SOPUCYA12A8C13A694', u'SOUFTBI12AB0183F65',\n",
-       "       u'SOVDSJC12A58A7A271',\n",
-       "       ...\n",
-       "       u'SOHYAJD12A8AE47C36', u'SOJSUIS12A8C13BDC4', u'SOGZCOB12A8C14280E',\n",
-       "       u'SOYIJIL12A6701F1C1', u'SOWRCYH12A58A7C559', u'SOSRJRK12AB0186FF4',\n",
-       "       u'SOWTLYJ12A8C13BC7C', u'SOJQWUD12AB017DD5E', u'SOOCMSA12AB017F6BD',\n",
-       "       u'SOYASKG12AF72A32E0'],\n",
-       "      dtype='object', name=u'song', length=1000)"
+       "                    play_count\n",
+       "song                          \n",
+       "SOBONKR12A58A7A7E0      726885\n",
+       "SOAUWYT12A81C206F1      648239\n",
+       "SOSXLTC12AF72A7F54      527893\n",
+       "SOFRQTD12A81C233C0      425463\n",
+       "SOEGIYH12A6D4FC0E3      389880\n",
+       "SOAXGDH12A8C13F8A1      356533\n",
+       "SONYKOW12AB01849C9      292642\n",
+       "SOPUCYA12A8C13A694      274627\n",
+       "SOUFTBI12AB0183F65      268353\n",
+       "SOVDSJC12A58A7A271      244730\n",
+       "SOOFYTN12A6D4F9B35      241669\n",
+       "SOHTKMO12AB01843B0      236494\n",
+       "SOBOUPA12A6D4F81F1      225652\n",
+       "SODJWHY12A8C142CCE      209212\n",
+       "SOLFXKT12AB017E3E0      197181\n",
+       "SOTCMDJ12A6D4F8528      192884\n",
+       "SOFLJQZ12A6D4FADA6      185653\n",
+       "SOTWNDJ12A8C143984      174080\n",
+       "SOUNZHU12A8AE47481      158636\n",
+       "SOUVTSM12AC468F6A7      155717"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "song_popularity_subset.index"
+    "song_popularity_subset.head(20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_popularity_subset = {s: 1 for s in song_popularity_subset.index}"
+    "song_popularity_subset_dict = {s: 1 for s in song_popularity_subset.index}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(song_popularity_subset_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,22 +521,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9731058"
+       "44774993"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(data_subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# subset msd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000000"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(msd_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "999056"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(msd_df[\"song_id\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_msd_df = msd_df[msd_df[\"song_id\"].map(lambda x : x in song_popularity_subset_dict)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "len(subset_msd_df)\n",
+    "with open(\"data/song_track_artist.pkl\", \"w\") as f:\n",
+    "    pickle.dump(subset_msd_df, f)"
    ]
   },
   {
