--- a/Explore Data.ipynb
+++ b/Explore Data.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "wrong path",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-f7e1b51ee5dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mmsd_subset_data_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsd_subset_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0mmsd_subset_addf_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsd_subset_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'AdditionalFiles'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsd_subset_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'wrong path'\u001b[0m \u001b[0;31m# sanity check\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;31m# path to the Million Song Dataset code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;31m# CHANGE IT TO YOUR LOCAL CONFIGURATION\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: wrong path"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tutorial for the Million Song Dataset\n",
@@ -47,6 +35,7 @@
     "\"\"\"\n",
     "\n",
     "# usual imports\n",
+    "import pickle\n",
     "import os\n",
     "import sys\n",
     "import time\n",
@@ -56,7 +45,7 @@
     "import numpy as np # get it at: http://numpy.scipy.org/\n",
     "# path to the Million Song Dataset subset (uncompressed)\n",
     "# CHANGE IT TO YOUR LOCAL CONFIGURATION\n",
-    "msd_subset_path='./data/MSD/MillionSongSubset'\n",
+    "msd_subset_path='/mnt/snap'\n",
     "msd_subset_data_path=os.path.join(msd_subset_path,'data')\n",
     "msd_subset_addf_path=os.path.join(msd_subset_path,'AdditionalFiles')\n",
     "assert os.path.isdir(msd_subset_path),'wrong path' # sanity check\n",
@@ -70,16 +59,17 @@
     "sys.path.append(os.path.join(msd_code_path,'PythonSrc') )\n",
     "\n",
     "# imports specific to the MSD\n",
-    "import hdf5_getters as GETTERS\n",
+    "# import hdf5_getters as GETTERS\n",
+    "from PythonSrc import hdf5_getters as GETTERS\n",
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import json"
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1926,21 +1918,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "genre_dict = {}\n",
+    "genre_set = set()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Explore genre data:\n",
-    "genre_dict = {}\n",
-    "genre_set = set()\n",
-    "with open('data/MSD/msd_tagtraum_cd2.cls', 'r') as fp:\n",
+    "\n",
+    "\n",
+    "with open('data/msd_tagtraum_cd2.cls', 'r') as fp:\n",
     "    lines = fp.readlines()\n",
     "    for i in range(7, len(lines)):\n",
     "        split = lines[i].strip().split()\n",
@@ -1950,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1969,44 +1964,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "['Reggae', 'Rock', 'Pop_Rock', 'Metal', 'World', 'International', 'RnB', 'Jazz', 'Punk', 'Vocal', 'Latin', 'Pop', 'Rap', 'Country', 'New', 'Blues', 'Electronic', 'Folk']\n",
+      "286024\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Blues',\n",
-       " 'Country',\n",
-       " 'Electronic',\n",
-       " 'Folk',\n",
-       " 'Jazz',\n",
-       " 'Latin',\n",
-       " 'Metal',\n",
-       " 'New',\n",
-       " 'Pop',\n",
-       " 'Punk',\n",
-       " 'Rap',\n",
-       " 'Reggae',\n",
-       " 'RnB',\n",
-       " 'Rock',\n",
-       " 'World'}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(genre_set))\n",
-    "genre_set\n"
+    "print(list(genre_set))\n",
+    "genre_set\n",
+    "print(len(list(genre_dict.keys())))"
    ]
   },
   {
@@ -2050,6 +2023,229 @@
    "outputs": [],
    "source": [
     "np.save(open(\"data/chroma.npy\", \"w\"), l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/track-genre-mapping.json', 'w') as fp:\n",
+    "    genre_dict = json.load(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/song_track_artist.pkl', \"rb\") as f:\n",
+    "    u = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18        TRMMMTK128F424EF7C\n",
+      "32        TRMMMQN128F4238509\n",
+      "33        TRMMMKQ128F92EBCB5\n",
+      "47        TRMMMFG128F425087B\n",
+      "53        TRMMMQA128F14A454A\n",
+      "61        TRMMWJS12903CBB7F5\n",
+      "84        TRMMWQU12903CF447F\n",
+      "94        TRMMWCX128F92EF4C8\n",
+      "115       TRMMGCB128E079651D\n",
+      "117       TRMMGPD128F42AA230\n",
+      "123       TRMMGTX128F92FB4D9\n",
+      "139       TRMMGRZ12903CE1C82\n",
+      "145       TRMMGDP128F933E59A\n",
+      "152       TRMMGSH128F4243869\n",
+      "169       TRMMHGT128F42B91AD\n",
+      "172       TRMMHBF12903CF6E59\n",
+      "175       TRMMHDI128F42442F4\n",
+      "191       TRMMHKG12903CDB1B5\n",
+      "211       TRMMHDT128F422F115\n",
+      "226       TRMMHWD128F14AE65F\n",
+      "239       TRMMCRE128F42481FB\n",
+      "240       TRMMCBU128E0791823\n",
+      "245       TRMMCDR128F423AB03\n",
+      "259       TRMMCCU128F92E1A71\n",
+      "266       TRMMCPH128F429F862\n",
+      "285       TRMMRZW128EF34DF59\n",
+      "287       TRMMRNI128EF34C4A7\n",
+      "290       TRMMRJJ128F9319DE9\n",
+      "293       TRMMRIO128F423DD33\n",
+      "296       TRMMRPV128F93110FE\n",
+      "                 ...        \n",
+      "999710    TRYYDQP128F42281C2\n",
+      "999728    TRYYDTF128F9344595\n",
+      "999729    TRYYDUX128F4278732\n",
+      "999730    TRYYDLF128F423BB17\n",
+      "999740    TRYYOWT128F42B6558\n",
+      "999744    TRYYOAR128F93123FF\n",
+      "999753    TRYYOFY128F428F65B\n",
+      "999755    TRYYONN128F426A856\n",
+      "999769    TRYYOOB128F424FF58\n",
+      "999777    TRYYOQU128F9333B2F\n",
+      "999781    TRYYOGV128F92D33A4\n",
+      "999796    TRYYOBH128F1480563\n",
+      "999809    TRYYXJI128F9317502\n",
+      "999817    TRYYXGW128E078E5E0\n",
+      "999820    TRYYXGM128F9320C49\n",
+      "999827    TRYYXQD128F92EA615\n",
+      "999858    TRYYXRZ128F9331D61\n",
+      "999877    TRYYKWY128F425D7CF\n",
+      "999908    TRYYKXS128F42A4C87\n",
+      "999910    TRYYKTU128F9344E47\n",
+      "999914    TRYYKXQ128F42883F2\n",
+      "999917    TRYYKKO128F4263A84\n",
+      "999923    TRYYKZT128F42739E3\n",
+      "999925    TRYYKCQ128F42166D3\n",
+      "999943    TRYYYZJ128F148A1B7\n",
+      "999957    TRYYYJD128F429528C\n",
+      "999971    TRYYYCS128F930C271\n",
+      "999972    TRYYYJZ128F424BFA1\n",
+      "999978    TRYYYWR128F4267C95\n",
+      "999988    TRYYYWX128F92E11D1\n",
+      "Name: track_id, Length: 100600, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "track_ids = u[\"track_id\"]\n",
+    "print(track_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genres = {'Reggae':0, 'Rock':1, 'Pop_Rock':2, 'Metal':3, 'World':4, 'International':5, 'RnB':6, 'Jazz':7, 'Punk':8, 'Vocal':9, 'Latin':10, 'Pop':11, 'Rap':12, 'Country':13, 'New':14, 'Blues':15, 'Electronic':16, 'Folk':17}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "relevant_track_ids = []\n",
+    "chroma_features = np.array([])\n",
+    "mfcc_features = np.array([])\n",
+    "genre_labels = np.array([])\n",
+    "# NLP_embedding = np.array([])\n",
+    "prev_time = time.time()\n",
+    "\n",
+    "def foo(track_id):\n",
+    "    global relevant_track_ids, genre_labels, chroma_features, mfcc_features, genre_dict\n",
+    "    filename = '/mnt/snap/data/' + track_id[2] + '/' + track_id[3] + '/' + track_id[4] + '/' + track_id + '.h5'\n",
+    "    h5 = GETTERS.open_h5_file_read(filename)\n",
+    "    chroma = GETTERS.get_segments_pitches(h5)\n",
+    "    mfcc = GETTERS.get_segments_timbre(h5)\n",
+    "    genre = genre_dict.get(track_id)\n",
+    "    \n",
+    "    if (chroma.shape[0] > 300):\n",
+    "        if mfcc.shape[0] > 300:\n",
+    "            if genre:\n",
+    "                idx = genres[genre]\n",
+    "                onehot = np.zeros(18)\n",
+    "                onehot[idx] = 1.0\n",
+    "                chroma_features = np.concatenate((chroma_features, np.array([chroma[:300]]))) if chroma_features.size else np.array([chroma[:300]])\n",
+    "                mfcc_features = np.concatenate((mfcc_features, np.array([mfcc[:300]]))) if mfcc_features.size else np.array([mfcc[:300]])\n",
+    "                genre_labels = np.concatenate((genre_labels, onehot)) if genre_labels.size else onehot\n",
+    "                relevant_track_ids += [track_id]\n",
+    "    h5.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4178.47227311\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "track_ids[:20000].map(foo)\n",
+    "print(time.time()-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(open(\"data/chroma.npy\", \"w\"), chroma_features[:10000])\n",
+    "np.save(open(\"data/mfcc.npy\", \"w\"), mfcc_features[:10000])\n",
+    "np.save(open(\"data/genre_onehot.npy\", \"w\"), genre_labels[:10000*18])\n",
+    "f = open(\"track_ids.txt\", \"w\")\n",
+    "for track in relevant_track_ids[:10000]:\n",
+    "    f.write(track+\"\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16697\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(relevant_track_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16697, 300, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mfcc_features.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"track_ids.txt\", \"w\")\n",
+    "for track in relevant_track_ids[:10000]:\n",
+    "    f.write(track+\"\\n\")\n",
+    "f.close()"
    ]
   },
   {
