More training, cleaned up data

--- a/Explore Data.ipynb
+++ b/Explore Data.ipynb
@@ -2135,15 +2135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "relevant_track_ids = []\n",
-    "chroma_features = np.array([])\n",
-    "mfcc_features = np.array([])\n",
-    "genre_labels = np.array([])\n",
+    "chroma_features = list()#np.array([])\n",
+    "mfcc_features = []#np.array([])\n",
+    "genre_labels = []#np.array([])\n",
     "# NLP_embedding = np.array([])\n",
     "prev_time = time.time()\n",
     "\n",
@@ -2161,67 +2161,87 @@
     "                idx = genres[genre]\n",
     "                onehot = np.zeros(18)\n",
     "                onehot[idx] = 1.0\n",
-    "                chroma_features = np.concatenate((chroma_features, np.array([chroma[:300]]))) if chroma_features.size else np.array([chroma[:300]])\n",
-    "                mfcc_features = np.concatenate((mfcc_features, np.array([mfcc[:300]]))) if mfcc_features.size else np.array([mfcc[:300]])\n",
-    "                genre_labels = np.concatenate((genre_labels, onehot)) if genre_labels.size else onehot\n",
+    "                chroma_features.append(chroma[:300])\n",
+    "                mfcc_features.append(np.array(mfcc[:300]))\n",
+    "                genre_labels.append(onehot)\n",
+    "#                 chroma_features = np.concatenate((chroma_features, np.array([chroma[:300]]))) if chroma_features.size else np.array([chroma[:300]])\n",
+    "#                 mfcc_features = np.concatenate((mfcc_features, np.array([mfcc[:300]]))) if mfcc_features.size else np.array([mfcc[:300]])\n",
+    "#                 genre_labels = np.concatenate((genre_labels, onehot)) if genre_labels.size else onehot\n",
+    "\n",
     "                relevant_track_ids += [track_id]\n",
-    "    h5.close()\n"
+    "    h5.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4178.47227311\n"
+      "228.129992008\n"
      ]
     }
    ],
    "source": [
     "start_time = time.time()\n",
-    "track_ids[:20000].map(foo)\n",
+    "track_ids.map(foo)\n",
     "print(time.time()-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(open(\"data/chroma.npy\", \"w\"), chroma_features[:10000])\n",
-    "np.save(open(\"data/mfcc.npy\", \"w\"), mfcc_features[:10000])\n",
-    "np.save(open(\"data/genre_onehot.npy\", \"w\"), genre_labels[:10000*18])\n",
+    "chroma_features = np.array(chroma_features)\n",
+    "mfcc_features = np.array(mfcc_features)\n",
+    "genre_labels = np.array(genre_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(open(\"data/chroma.npy\", \"w\"), chroma_features)\n",
+    "np.save(open(\"data/mfcc.npy\", \"w\"), mfcc_features)\n",
+    "np.save(open(\"data/genre_onehot.npy\", \"w\"), genre_labels)\n",
     "f = open(\"track_ids.txt\", \"w\")\n",
-    "for track in relevant_track_ids[:10000]:\n",
+    "for track in relevant_track_ids:\n",
     "    f.write(track+\"\\n\")\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16697\n"
+      "12022\n",
+      "100600\n",
+      "[u'TRMMMTK128F424EF7C' u'TRMMMQN128F4238509' u'TRMMMKQ128F92EBCB5' ...\n",
+      " u'TRYYYJZ128F424BFA1' u'TRYYYWR128F4267C95' u'TRYYYWX128F92E11D1']\n"
      ]
     }
    ],
    "source": [
-    "print(len(relevant_track_ids))"
+    "print(len(relevant_track_ids))\n",
+    "print(len(list(set(track_ids.values))))\n",
+    "print(track_ids.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
